Update find screen & more screen

--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -14,3 +14,22 @@
 .screen-header__icons span {
   margin-left: 25px;
 }
+
+.screen-header__icons {
+  display: flex;
+}
+
+.screen-header__box {
+  position: relative;
+  display: flex;
+}
+
+.screen-header__dot {
+  background-color: tomato;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  position: absolute;
+  right: -5px;
+  top: -5px;
+}
