--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -4,9 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 10px;
 }
 
 .alt-header__title {
   font-size: 28px;
   font-weight: 600;
+}
+
+.alt-header__column i:first-child {
+  margin-right: 20px;
 }
