--- a/css/screens/settings.css
+++ b/css/screens/settings.css
@@ -1,12 +1,17 @@
 .settings__setting {
   padding: 20px 0;
   border-bottom: var(--main-border);
-  font-size: 18;
+  font-size: 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .settings__setting i {
   opacity: 0.8;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.settings__setting-column:last-child {
+  opacity: 0.5;
 }
