--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -16,10 +16,23 @@
   color: #2e363e;
   position: relative;
 }
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notification {
   position: absolute;
   left: 20px;
   bottom: 15px;
+  animation: notificationAnimation 2s ease-in-out infinite;
 }
 .nav__dot {
   background-color: tomato;
@@ -31,4 +44,29 @@
   align-items: center;
   position: absolute;
   left: 35px;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+.nav__btn {
+  transform: translateY(80px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.5s ease-in-out forwards;
+}
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.nav__btn:nth-child(4) {
+  animation-delay: 0.8s;
 }
