--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,28 +1,3 @@
-.find-icons {
-  color: rgba(0, 0, 0, 0.8);
-  display: flex;
-  justify-content: space-between;
-  height: 110px;
-}
-
-.find-icons__icon {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.find-icons__icon i {
-  font-size: 40px;
-}
-
-.find-icons__icon span {
-  margin-top: 20px;
-  font-weight: 400;
-  text-align: center;
-  font-size: 18px;
-  width: 100px;
-}
-
 .recommended-friends {
   margin: 25px 0;
   padding: 25px 0;
@@ -123,4 +98,24 @@
 }
 .open-post__heart-count span {
   margin-left: 3px;
+}
+
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.open-post__heart-count:hover i {
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
 }
